--- a/game.html
+++ b/game.html
@@ -12,5 +12,8 @@
     <h1>Space Invaders</h1>
     
     <script src="game.js"></script>
+    <script src="data.js"></script>
+    <script src="functions.js"></script>
+
 </body>
 </html>
