--- a/game.html
+++ b/game.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
+    <link rel="stylesheet" href="./01/chat/style.css">
     <title>Invaders</title>
 </head>
+
 <body>
-    <div id="game"></div>
-    <h1>Space Invaders</h1>
-    
-    <script src="game.js"></script>
-    <script src="data.js"></script>
-    <script src="functions.js"></script>
+    <div class="row">
+        <div>
+            <div id="game"></div>
+            <h1>Space Invaders</h1>
+
+            <script src="game.js"></script>
+            <script src="data.js"></script>
+            <script src="functions.js"></script>
+        </div>
+
+        <div>
+            <iframe src="./01/chat/index.html" width="400" height="200" border:none></iframe>
+        </div>
+    </div>
 
 </body>
+
 </html>
