--- a/game.html
+++ b/game.html
@@ -17,14 +17,20 @@
             <div id="game"></div>
             <h1>Space Invaders</h1>
 
-            <script src="game.js"></script>
-            <script src="data.js"></script>
-            <script src="functions.js"></script>
+            <div style="position:relative; top: 160px; left: 1000000px;">
+                <script src="game.js"></script>
+                <script src="data.js"></script>
+                <script src="functions.js"></script>
+            </div>
+
+            
         </div>
 
-        <div>
-            <iframe src="./01/chat/index.html" width="400" height="200" border:none></iframe>
-        </div>
+
+
+        <!-- <div>
+            <iframe src="./01/chat/index.html" width="800" height="600" ></iframe>
+        </div> -->
     </div>
 
 </body>
